# repo_template

./: .flake8  README.md  pyproject.toml  setup.cfg
src/repo_template/: app.py
