[metadata]
name = repo_template
version = attr: repo_template.version.__version__
author = Yasyrev Andrei
author_email = a.yasyrev@gmail.com
description = Docs from jupyter notebooks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayasyrev/repo_template
license = apache2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    repo_template=repo_template.app:dummy_func
pipx.run =
    repo_template=repo_template.app:dummy_func